Feed: Fix feed alignment

--- a/src/pages/FeedPage/FeedPage.module.scss
+++ b/src/pages/FeedPage/FeedPage.module.scss
@@ -1,7 +1,7 @@
 .root {
 	display: grid;
 	grid-auto-flow: column;
-	grid-template-columns: 1fr 656px 3fr;
+	grid-template-columns: 1fr 656px 1.5fr;
 
 	@include less920px {
 		grid-template-columns: 1fr 656px 1fr;
